MQTT sākotnējā platforma un tās testēšana -----------------------------------------
MQTT mitinātājs atrodas uz sava pavediena, kur tas apstrādās visas MQTT lietas abos virzienos.

Testēšanai implementēts vispārējo tēmu apstrādātājs, kas visus MQTT ziņojumus raksta datubāzē.

Funkcija jebkādas tēmas un satura MQTT ziņojuma sūtīšanai.

Divi jauni API galapunkti MQTT testēšanai (atjaunināts attiecīgi arī "openapi.yaml"):
1. /api/mqtt-logs/{limit}   zināma skaita mqtt ziņojumu āplūkošanai.
2. /api/mqtt-message        jebkāda MQTT ziņojuma sūtīšanai.
