# models/mqttmodels.go
@@ -1,0 +1,13 @@
+package models
+
+type MqttConfig struct {
+	Host     string
+	Port     int
+	Username string
+	Password string
+}
+
+type MqttMessage struct {
+	Topic   string `json:"topic"`
+	Payload []byte `json:"payload"`
+}
